# src/main/java/com/diegchav/staywise/api/error/GlobalExceptionHandler.java
@@ -1,9 +1,7 @@
 package com.diegchav.staywise.api.error;
 
 import com.diegchav.staywise.api.dto.ErrorResponse;
-import com.diegchav.staywise.exception.IdempotencyProcessingException;
-import com.diegchav.staywise.exception.NoInventoryException;
-import com.diegchav.staywise.exception.SoldOutException;
+import com.diegchav.staywise.exception.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -41,6 +39,28 @@ public class GlobalExceptionHandler {
         );
 
         return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body(errorResponse);
+    }
+
+    @ExceptionHandler(BookingNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleBookingNotFoundException(BookingNotFoundException ex) {
+        var errorResponse = new ErrorResponse(
+                ex.getMessage(),
+                HttpStatus.NOT_FOUND.value()
+        );
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(errorResponse);
+    }
+
+    @ExceptionHandler(InventoryReleaseFailedException.class)
+    public ResponseEntity<ErrorResponse> handleInventoryReleaseFailedException(InventoryReleaseFailedException ex) {
+        var errorResponse = new ErrorResponse(
+                ex.getMessage(),
+                HttpStatus.CONFLICT.value()
+        );
+
+        return ResponseEntity.status(HttpStatus.CONFLICT)
                 .body(errorResponse);
     }
 }
